--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,9 @@
     {% include 'inc/navbar.html' %}
     <div class="jumbotron">
           {% include 'inc/messages.html' %}
+        {% if request.user.is_authenticated %}
+        <h2>Hello {{request.user.first_name}} {{request.user.last_name}}</h2>
+         {% endif %}
           {% block content %}{%endblock%}
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
