--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -3,11 +3,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link " aria-current="page" href="#">Home</a>
         </li>
-
-         <li class="nav-item">
-          <a class="nav-link" href="#">Sample</a>
+        <li class="nav-item">
+          <a class="nav-link {% if request.resolver_match.url_name == 'profile' %}active{% endif %}" href="{% url 'user:profile' %}">Profile</a>
         </li>
         {% if request.user.is_authenticated %}
          <li class="nav-item">
