--- a/doctor/templates/doctor/doctor_detail.html
+++ b/doctor/templates/doctor/doctor_detail.html
@@ -35,7 +35,7 @@
                 <p class="text-muted mb-0">status:{{ appointment.status|yesno:"Available,Not Available" }}</p>
               </div>
                   <div class="col-sm-2">
-                <p class="text-muted mb-0"><a href="" class="btn btn-primary">reserve</a></p>
+                <p class="text-muted mb-0"><a href="{% url 'reservation:make_reservation' appointment.id %}" class="btn btn-primary">reserve</a></p>
               </div>
             </div>
             <hr>
