--- a/doctor/templates/doctor/doctor_detail.html
+++ b/doctor/templates/doctor/doctor_detail.html
@@ -3,6 +3,87 @@
 {% block title %} Doctor {% endblock %}
 
 {% block content %}
+
+<section style="background-color: #eee;">
+  <div class="container py-5">
+
+
+    <div class="row">
+      <div class="col-lg-4">
+        <div class="card mb-4">
+          <div class="card-body text-center">
+            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
+              class="rounded-circle img-fluid" style="width: 150px;">
+            <h5 class="my-3">{{ doctor.user.first_name }} {{ doctor.user.last_name }}</h5>
+            <p class="text-muted mb-1">specialize: {{ doctor.specialization.name }} | experience:{{ doctor.experience_year|default:"0" }}</p>
+            <p class="text-muted mb-4">fee: {{ doctor.visit_fee }}</p>
+
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-8">
+        <div class="card mb-4">
+          <div class="card-body">
+              {% for appointment in appointments %}
+              <div class="row">
+              <div class="col-sm-4">
+                <p class="mb-0">date: {{appointment.date}} </p>
+              </div>
+              <div class="col-sm-4">
+                <p class="text-muted mb-0">time:  {{appointment.start_time}} - {{appointment.end_time}}</p>
+              </div>
+                  <div class="col-sm-2">
+                <p class="text-muted mb-0">status:{{ appointment.status|yesno:"Available,Not Available" }}</p>
+              </div>
+                  <div class="col-sm-2">
+                <p class="text-muted mb-0"><a href="{% url 'reservation:make_reservation' appointment.id %}" class="btn btn-primary">reserve</a></p>
+              </div>
+            </div>
+            <hr>
+              {% endfor %}
+
+<!--            <div class="row">-->
+<!--              <div class="col-sm-3">-->
+<!--                <p class="mb-0">Email</p>-->
+<!--              </div>-->
+<!--              <div class="col-sm-9">-->
+<!--                <p class="text-muted mb-0">example@example.com</p>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--            <hr>-->
+<!--            <div class="row">-->
+<!--              <div class="col-sm-3">-->
+<!--                <p class="mb-0">Phone</p>-->
+<!--              </div>-->
+<!--              <div class="col-sm-9">-->
+<!--                <p class="text-muted mb-0">(097) 234-5678</p>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--            <hr>-->
+<!--            <div class="row">-->
+<!--              <div class="col-sm-3">-->
+<!--                <p class="mb-0">Mobile</p>-->
+<!--              </div>-->
+<!--              <div class="col-sm-9">-->
+<!--                <p class="text-muted mb-0">(098) 765-4321</p>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--            <hr>-->
+<!--            <div class="row">-->
+<!--              <div class="col-sm-3">-->
+<!--                <p class="mb-0">Address</p>-->
+<!--              </div>-->
+<!--              <div class="col-sm-9">-->
+<!--                <p class="text-muted mb-0">Bay Area, San Francisco, CA</p>-->
+<!--              </div>-->
+<!--            </div>-->
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
         <h3>{{ doctor.user.first_name }} {{ doctor.user.last_name }}<br></h3>
         specialization__name : {{ doctor.specialization.name }}<br>
         experience (year) : {{ doctor.experience }}<br>
@@ -16,5 +97,5 @@
                 <a href="{% url 'rating:rating' doctor.id %}" class="btn btn-primary">
                   Rate Doctor
                 </a>
-        </div>
+
 {%endblock%}
