add templates for view

--- a/doctor/templates/doctor/doctor_list.html
+++ b/doctor/templates/doctor/doctor_list.html
@@ -8,6 +8,7 @@
 
     {% for doctor in doctor_list %}
     <div class="card col-lg-12" style="width: 18rem; margin:5px;">
+        <img class="card-img-top" src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title">{{ doctor.user.first_name }} {{ doctor.user.last_name }}</h5>
     <p class="card-text">
