--- a/user/templates/user/profile_edit.html
+++ b/user/templates/user/profile_edit.html
@@ -8,12 +8,94 @@
 {% block title %}Edit Profile{% endblock %}
 
 {% block content %}
-  <h2>Edit Profile</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <p><a href="{% url 'user:password_change' %}">Change Password</a></p>
-    <button type="submit">Save Changes</button>
-  </form>
+<section class="" style="background-color: #2779e2;">
+  <div class="container h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-xl-9">
 
+        <h1 class="text-white mb-4">Edit Profile</h1>
+
+        <div class="card" style="border-radius: 15px;">
+          <div class="card-body">
+
+            <form method="post">
+              {% csrf_token %}
+
+              <div class="row align-items-center pt-4 pb-3">
+                <div class="col-md-3 ps-5">
+                  <h6 class="mb-0">First Name</h6>
+                </div>
+                <div class="col-md-9 pe-5">
+                  {{ form.first_name }}
+                </div>
+              </div>
+
+              <hr class="mx-n3">
+
+              <div class="row align-items-center pt-4 pb-3">
+                <div class="col-md-3 ps-5">
+                  <h6 class="mb-0">Last Name</h6>
+                </div>
+                <div class="col-md-9 pe-5">
+                  {{ form.last_name }}
+                </div>
+              </div>
+
+              <hr class="mx-n3">
+
+              <div class="row align-items-center py-3">
+                <div class="col-md-3 ps-5">
+                  <h6 class="mb-0">Username</h6>
+                </div>
+                <div class="col-md-9 pe-5">
+                  {{ form.username }}
+                </div>
+              </div>
+
+              <hr class="mx-n3">
+
+<!--              <div class="row align-items-center py-3">-->
+<!--                <div class="col-md-3 ps-5">-->
+<!--                  <h6 class="mb-0">Email Address</h6>-->
+<!--                </div>-->
+<!--                <div class="col-md-9 pe-5">-->
+<!--                  {{ form.email }}-->
+<!--                </div>-->
+<!--              </div>-->
+
+<!--              <hr class="mx-n3">-->
+
+              <div class="row align-items-center py-3">
+                <div class="col-md-3 ps-5">
+                  <h6 class="mb-0">Phone</h6>
+                </div>
+                <div class="col-md-9 pe-5">
+                  {{ form.phone }}
+                </div>
+              </div>
+
+              <hr class="mx-n3">
+            <div class="row">
+              <div class="col-md-12">
+                 <div class="mb-6 py-4">
+                <button type="submit" class="btn btn-primary btn-lg">Save Changes</button>
+              </div>
+            <div class="mb-6 py-4">
+              <a href="{% url 'user:password_change' %}" class="btn btn-outline-primary btn-lg">Change Password</a>
+            </div>
+              </div>
+
+            </div>
+
+            </form>
+
+
+
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
 {% endblock %}
