change views for details and rate

--- a/reservation/templates/reservation/reservation_create.html
+++ b/reservation/templates/reservation/reservation_create.html
@@ -3,7 +3,7 @@
 {% block title %}Reservation Details{% endblock %}
 
 {% block content %}
-<section class="vh-100" style="background-color: #fdccbc;">
+<section class="vh-100" style="background-color: #2779e2;">
   <div class="container h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col">
