--- a/doctor/templates/doctor/doctor_detail.html
+++ b/doctor/templates/doctor/doctor_detail.html
@@ -16,7 +16,7 @@
               class="rounded-circle img-fluid" style="width: 150px;">
             <h5 class="my-3">{{ doctor.user.first_name }} {{ doctor.user.last_name }}</h5>
             <p class="text-muted mb-1">specialize: {{ doctor.specialization.name }} | experience:{{ doctor.experience_year|default:"0" }}</p>
-            <p class="text-muted mb-4">fee: {{ doctor.visit_fee }}</p>
+            <p class="text-muted mb-4">fee: {{ doctor.visit_fee }} | rate:  {{ average_rating|floatformat:1 }}</p>
 
           </div>
         </div>
@@ -42,41 +42,24 @@
             <hr>
               {% endfor %}
 
-<!--            <div class="row">-->
-<!--              <div class="col-sm-3">-->
-<!--                <p class="mb-0">Email</p>-->
-<!--              </div>-->
-<!--              <div class="col-sm-9">-->
-<!--                <p class="text-muted mb-0">example@example.com</p>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--            <hr>-->
-<!--            <div class="row">-->
-<!--              <div class="col-sm-3">-->
-<!--                <p class="mb-0">Phone</p>-->
-<!--              </div>-->
-<!--              <div class="col-sm-9">-->
-<!--                <p class="text-muted mb-0">(097) 234-5678</p>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--            <hr>-->
-<!--            <div class="row">-->
-<!--              <div class="col-sm-3">-->
-<!--                <p class="mb-0">Mobile</p>-->
-<!--              </div>-->
-<!--              <div class="col-sm-9">-->
-<!--                <p class="text-muted mb-0">(098) 765-4321</p>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--            <hr>-->
-<!--            <div class="row">-->
-<!--              <div class="col-sm-3">-->
-<!--                <p class="mb-0">Address</p>-->
-<!--              </div>-->
-<!--              <div class="col-sm-9">-->
-<!--                <p class="text-muted mb-0">Bay Area, San Francisco, CA</p>-->
-<!--              </div>-->
-<!--            </div>-->
+            <div class="row">
+              <div class="col-sm-3">
+                <p class="mb-0">Rate</p>
+              </div>
+              <div class="col-sm-9">
+                <form method="post" action="{%url 'rating:rating' doctor.user.id %}">
+                          {% csrf_token %}
+                    <div class="row">
+                         <div class="col-sm-4"> {{ rating_form.rate }}</div>
+                    <div class="col-sm-4"> <button type="submit" class="btn btn-primary">Submit Rating</button></div>
+                    </div>
+
+
+                </form>
+              </div>
+            </div>
+            <hr>
+              
           </div>
         </div>
       </div>
@@ -84,18 +67,9 @@
   </div>
 </section>
 
-        <h3>{{ doctor.user.first_name }} {{ doctor.user.last_name }}<br></h3>
-        specialization__name : {{ doctor.specialization.name }}<br>
-        experience (year) : {{ doctor.experience }}<br>
-        visit fee : {{ doctor.visit_fee }}<hr>
-        <a href="{% url 'doctor:doctor_list' %}"> All doctor </a><br>
-	{% if doctor.user == request.user %}
-                <a href="{% url 'doctor:doctor_update' doctor.pk %}" >edit</a> | <a href="{% url 'doctor:doctor_delete' doctor.pk %}">delete</a>
-        {% endif %}
-        <br><br>
-        <div>
-                <a href="{% url 'rating:rating' doctor.id %}" class="btn btn-primary">
-                  Rate Doctor
-                </a>
-
+<!--        <div>-->
+<!--                <a href="{% url 'rating:rating' doctor.id %}" class="btn btn-primary">-->
+<!--                  Rate Doctor-->
+<!--                </a>-->
+<!--        </div>-->
 {%endblock%}
