--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -1,11 +1,44 @@
 {% extends 'base.html' %}
 {% block title %}
-    login
+    Login
 {% endblock title %}
 {% block content %}
-<form action="" method="post" novalidate>
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="submit">
-</form>
+<section class="vh-100" style="background-color: #508bfc;">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+        <div class="card shadow-2-strong" style="border-radius: 1rem;">
+          <div class="card-body p-5 text-center">
+
+            <h3 class="mb-5">Sign in</h3>
+
+            <form action="" method="post" novalidate>
+              {% csrf_token %}
+
+              <div data-mdb-input-init class="form-outline mb-4">
+                {{ form.username.label_tag }}
+                {{ form.username }}
+              </div>
+
+              <div data-mdb-input-init class="form-outline mb-4">
+                {{ form.password.label_tag }}
+                {{ form.password }}
+              </div>
+
+
+              <button data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
+
+              <hr class="my-4">
+
+              <button data-mdb-button-init data-mdb-ripple-init class="btn btn-lg btn-block btn-primary" style="background-color: #dd4b39;"
+                type="submit"><i class="fab fa-google me-2"></i> Sign in with google</button>
+
+            </form>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 {% endblock content %}
