--- a/user/templates/user/signup.html
+++ b/user/templates/user/signup.html
@@ -103,6 +103,17 @@
               </div>
               <hr class="mx-n3">
 
+                <div class="row align-items-center py-3">
+                <div class="col-md-3 ps-5">
+                  <h6 class="mb-0">{{ form.consultation_fee.label }}</h6>
+                </div>
+                <div class="col-md-9 pe-5">
+                  {{ form.consultation_fee }}
+                </div>
+              </div>
+              <hr class="mx-n3">
+
+
               <!-- Submit button -->
               <div class="px-5 py-4">
                 <button type="submit" class="btn btn-primary btn-lg">Register</button>
