--- a/doctor/templates/doctor/doctor_detail.html
+++ b/doctor/templates/doctor/doctor_detail.html
@@ -76,7 +76,7 @@
 <!--        </div>-->
     <div class="mb-3">
     {% with comments.count as cm_count %}
-        <h5>{{ cm_count }} comment{{ cm_count|pluralize }} found:</h5>
+        <h5>{{ cm_count }} comment{{ cm_count|pluralize }}</h5>
         <hr class="my-3">
     {% endwith %}
 </div>
