--- a/doctor/templates/doctor/doctor_detail.html
+++ b/doctor/templates/doctor/doctor_detail.html
@@ -15,7 +15,7 @@
             <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
               class="rounded-circle img-fluid" style="width: 150px;">
             <h5 class="my-3">{{ doctor.user.first_name }} {{ doctor.user.last_name }}</h5>
-            <p class="text-muted mb-1">specialize: {{ doctor.specialization.name }} | experience:{{ doctor.experience_year|default:"0" }}</p>
+            <p class="text-muted mb-1">specialize: {{ doctor.specialization.name }} | experience:{{ doctor.experience }}</p>
             <p class="text-muted mb-4">fee: {{ doctor.visit_fee }} | rate:  {{ average_rating|floatformat:1 }}</p>
 
           </div>
