--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
   <div class="container-fluid">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -11,14 +11,17 @@
         </li>
 
          <li class="nav-item">
-          <a class="nav-link" href="{% url 'user:logout' %}">logout</a>
+          <a class="nav-link" href="{% url 'logout' %}">logout</a>
         </li>
         {% else %}
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'user:signup' %}">Register</a>
+          <a class="nav-link" href="{% url 'signup' %}">Register</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'user:login' %}">Login</a>
+          <a class="nav-link" href="{% url 'doctor_signup' %}">Doctor Register</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'login' %}">Login</a>
         </li>
         {% endif %}
       </ul>
