--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -3,7 +3,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link " aria-current="page" href="{% url 'doctor:doctor_list' %}">Home</a>
+          <a class="nav-link " aria-current="page" href="{% url 'reservation:doctor_list' %}">Home</a>
         </li>
         {% if request.user.is_authenticated %}
         <li class="nav-item">
